# CreditCardFraudDetection

./: .gitignore  pyproject.toml  template.py
src/components/: data_ingestion.py
